test/parser/struct_instantiation_error.dmz
// RUN: dmz %s -ast-dump 2>&1 | filecheck %s
struct Color {
    r: i32,
    g: i32,
    b: i32,
}

fn main() -> void {
    let err1 = Color {
        r: 0, 
        +,
        // CHECK: [[# @LINE -1 ]]:9: error: expected field initialization
        b: 2,
    };

    let x = 1;
}
// CHECK: StructDecl Color
// CHECK-NEXT:   FieldDecl:i32 r
// CHECK-NEXT:   FieldDecl:i32 g
// CHECK-NEXT:   FieldDecl:i32 b
// CHECK-NEXT: FunctionDecl main -> void
// CHECK-NEXT:   Block
// CHECK-NEXT:     DeclStmt
// CHECK-NEXT:       VarDecl: x
// CHECK-NEXT:         IntLiteral '1'
// CHECK-NOT: {{.*}}
